--- a/src/presentacio.html
+++ b/src/presentacio.html
@@ -47,9 +47,9 @@
           <h1>La comarca del Bages</h1>
           <div class="bages-map">
             <svg width="100%" height="100%" viewBox="0 0 2718 2736" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;">
-                <use xlink:href="#_Image1" x="0" y="0" width="2718px" height="2736px"/>
+                <use href="#_Image1" x="0" y="0""/>
                 <defs>
-                    <image id="_Image1" width="2718px" height="2736px" href="img/bages-map-png.png"/>
+                    <image id="_Image1" href="img/bages-map-png.png"/>
                 </defs>
             </svg>
           </div>
