First commit PAC 3

--- a/src/categoria.html
+++ b/src/categoria.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Categoria - PAC 1 Carla Illa</title>
+    <title>Categoria - PAC 3 Carla Illa</title>
     <link rel="stylesheet" href="styles.css">
-    <script type="module" src="app.js"></script>
+    <script async type="module" src="app.js"></script>
     <link rel="icon" type="image/x-icon" sizes="32x32" href="img/favicon.ico">
   </head>
   <body class="page-categoria">
@@ -52,7 +52,7 @@
                 <a href=""><picture>
                   <source media="(max-width: 1023px)" srcset="img/montserrat1-crop.webp">
                   <source media="(min-width: 1024px)" srcset="img/montserrat1.webp">
-                  <img src="img/montserrat1.webp" alt="Montserrat"></picture></a>
+                  <img src="img/montserrat1.webp" loading="lazy" alt="Montserrat"></picture></a>
               </figure>
               <p>Montserrat no és tan sols una muntanya, sinó que representa un símbol de la identitat catalana. Es troba dins el Parc Natural de Montserrat i destaca pel massís rocós dotat de diversos cims que caracteritza la seva silueta i un conjunt arquitectònic presidit pel monestir i el Santuari de la Mare de Déu de Montserrat. Atrau tant a peregrins d'arreu del món com excursionistes i escaladors que hi troben infinites rutes.</p>
             </dd>
@@ -64,7 +64,7 @@
                 <a href=""><picture>
                   <source media="(max-width: 1023px)" srcset="img/santbenet-crop.webp">
                   <source media="(min-width: 1024px)" srcset="img/santbenet.webp">
-                  <img src="img/santbenet.webp" alt="Sant Benet de Bages"></picture></a>
+                  <img src="img/santbenet.webp" loading="lazy" alt="Sant Benet de Bages"></picture></a>
               </figure>
               <p>El complex de Sant Benet de Bages, denominat Món Sant Benet, és un espai format pel monestir medieval de Sant Benet, un centre internacional de recerca en cuina (la Fundació Alícia), un hotel de quatre estrelles i un entorn natural incomparable. Des del 2007 està gestionat per la Fundació Catalunya La Pedrera i des de l'aleshores ha acollit diferents projectes i esdeveniments culturals.</p>
             </dd>
@@ -76,7 +76,7 @@
                 <a href=""><picture>
                   <source media="(max-width: 1023px)" srcset="img/cardona-crop.webp">
                   <source media="(min-width: 1024px)" srcset="img/cardona.webp">
-                  <img src="img/cardona.webp" alt="Cardona"></picture></a>
+                  <img src="img/cardona.webp" loading="lazy" alt="Cardona"></picture></a>
               </figure>
               <p>Cardona és una vila amb un notable llegat històric. El castell del segle IX situat dalt d'un turó li confereix un aspecte majestuós que s'escampa per tot el nucli antic, considerat un Bé d'Interès Cultural. La seva esplendor està molt lligada a l'explotació de la sal, ja que el municipi es situa a la Vall Salina, un entorn natural on la sal aflora a la superfície de la terra des de fa milers d'anys.</p>
             </dd>
@@ -88,7 +88,7 @@
                 <a href=""><picture>
                   <source media="(max-width: 1023px)" srcset="img/sant-llorenc-crop.webp">
                   <source media="(min-width: 1024px)" srcset="img/sant-llorenc.webp">
-                  <img src="img/sant-llorenc.webp" alt="Parc Natural de Sant Llorenç del Munt i l'Obac"></picture></a>
+                  <img src="img/sant-llorenc.webp" loading="lazy" alt="Parc Natural de Sant Llorenç del Munt i l'Obac"></picture></a>
               </figure>
               <p>El conjunt de Sant Llorenç del Munt i l'Obac, considerat un Espai Natural Protegit, és una formació muntanyosa coberta de bosc pertanyent a les comarques del Bages, el Moianès i el Vallès Occidental. Consta de més de tretze mil hectàrees d'extensió i comprèn més de tres-centes coves i avencs i dos cims destactats: la Mola i el Montcau. Les seves característiques geogràfiques i geològiques fan que sigui un destí de molts excursionistes, escaladors i espeleòlegs.</p>
             </dd>
@@ -100,7 +100,7 @@
                 <a href=""><picture>
                   <source media="(max-width: 1023px)" srcset="img/mura-crop.webp">
                   <source media="(min-width: 1024px)" srcset="img/mura.webp">
-                  <img src="img/mura.webp" alt="Mura"></picture></a>
+                  <img src="img/mura.webp" loading="lazy" alt="Mura"></picture></a>
               </figure>
               <p>Mura i Talamanca són dues poblacions molt pròximes al Parc Natural de Sant Llorenç del Munt i l'Obac. Destaquen per ser municipis amb encant, ja que els seus carrers estrets i empedrats transporten al passejant a èpoques passades. Compten amb diverses opcions gastronòmiques i, a més, es situen en un entorn natural molt atractiu que ofereix la possibilitat de fer moltes caminades.</p>
             </dd>
@@ -112,7 +112,7 @@
                 <a href="do-bages.html"><picture>
                   <source media="(max-width: 1023px)" srcset="img/do-pla-bages-crop.webp">
                   <source media="(min-width: 1024px)" srcset="img/do-pla-bages.webp">
-                  <img src="img/do-pla-bages.webp" alt="Raïm negre" class="picture-detall">
+                  <img src="img/do-pla-bages.webp" loading="lazy" alt="Raïm negre" class="picture-detall">
                 </picture></a>
               </figure>
               <p>La Denominació d'Origen Pla de Bages és un reconeixement de qualitat dels vins de la comarca creat el 1995. En ella s'hi integren nissagues de viticultors, cooperatives centenàries i petits projectes familiars. Un dels seus trets destacats és la reivindicació de varietats autòctones de raïm com el picapoll blanc i negre, el sumoll i el mandó. Alguns dels cellers que en formen part són l'Abadal, l'Oller del Mas i l'Exibis.</p>
@@ -125,7 +125,7 @@
                 <a href=""><picture>
                   <source media="(max-width: 1023px)" srcset="img/puig-balma-crop.webp">
                   <source media="(min-width: 1024px)" srcset="img/puig-balma.webp">
-                  <img src="img/puig-balma.webp" alt="El Puig de la Balma"></picture></a>
+                  <img src="img/puig-balma.webp" loading="lazy" alt="El Puig de la Balma"></picture></a>
               </figure>
               <p>El Puig de la Balma és un mas històric del segle XII situat al mig del Parc Natural de Sant Llorenç del Munt i l'Obac, dins del terme municipal de Mura. La seva característica més destacada és que està construït aprofitant les parets naturals d'un cingle. Actualment s'ha reconvertit en un allotjament rural i petit museu dels estris i utensilis que s'utilitzaven al mas per fer les feines diàries en el passat. A més, al 2010 es va utilitzar per rodar la premiada pel·lícula "Pa negre".</p>
             </dd>
@@ -137,7 +137,7 @@
                 <a href=""><picture>
                   <source media="(max-width: 1023px)" srcset="img/seu-crop.webp">
                   <source media="(min-width: 1024px)" srcset="img/seu.webp">
-                  <img src="img/seu.webp" alt="Basílica de la Seu de Manresa"></picture></a>
+                  <img src="img/seu.webp" loading="lazy" alt="Basílica de la Seu de Manresa"></picture></a>
               </figure>
               <p>La basílica de la Seu de Manresa és una categral d'estil gòtic dissenyada al segle XIV per Berenguer de Montagut, arquitecte de l'església de Santa Maria del Mar de Barcelona i la Catedral de Palma de Mallorca. Es tracta d'un edifici de culte que ha anat evolucionant al llarg de la història, ja que els seus inicis es remonten al segle IX. Compta amb una gran varietat d'elements patrimonials: claustres, capelles, retaules i vitralls de diferents èpoques, etc.</p>
             </dd>
@@ -149,7 +149,7 @@
                 <a href=""><picture>
                   <source media="(max-width: 1023px)" srcset="img/bruixeria-crop.webp">
                   <source media="(min-width: 1024px)" srcset="img/bruixeria.webp">
-                  <img src="img/bruixeria.webp" alt="Centre d'Interpretació de la Bruixeria"></picture></a>
+                  <img src="img/bruixeria.webp" loading="lazy" alt="Centre d'Interpretació de la Bruixeria"></picture></a>
               </figure>
               <p>El Centre d'Interpretació de la Bruxeria de Sant Feliu Sasserra va obrir les seves portes el 1998 i ofereix una exposició del fenomen de la bruixeria catalana del segle XVII. El museu mostra les diferents facetes de la bruixeria i les seves múltiples aplicacions, que es vinculen a pràctiques tant benèfiques com malèfiques. Alguns dels elements que s'hi poden observar són amulets, estris per elaborar medecines, herbes remeieres i il·lustracions.</p>
             </dd>
@@ -161,7 +161,7 @@
                 <a href="castellnou.html"><picture>
                   <source media="(max-width: 1023px)" srcset="img/castellnou-crop.webp">
                   <source media="(min-width: 1024px)" srcset="img/castellnou.webp">
-                  <img src="img/castellnou.webp" alt="Església de Castellnou de Bages" class="picture-detall">
+                  <img src="img/castellnou.webp" loading="lazy" alt="Església de Castellnou de Bages" class="picture-detall">
                 </picture></a>
               </figure>
               <p>El Museu dels Maquis, situat al nucli històric de Castellnou de Bages, és un centre de referència sobre el fenomen dels maquis a la Catalunya central. Repassa l'evolució de la lluita de guerrilles durant la Guerra Civil i el franquisme i relata els seus moviments i amagatalls. Entre molts d'altres es destaca el paper de Ramon Vila i Capdevila, denominat Caracremada, que va ser un dels maquis més populars i que està enterrat al cementiri que hi ha sota el museu.</p>
