--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PAC 1 Carla Illa</title>
+    <title>PAC 3 Carla Illa</title>
     <link rel="stylesheet" href="styles.css" >
-    <script type="module" src="app.js"></script>
+    <script async type="module" src="app.js"></script>
     <link rel="icon" type="image/x-icon" sizes="32x32" href="img/favicon.ico">
   </head>
   <body class="page-home">
