--- a/src/presentacio.html
+++ b/src/presentacio.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Presentació - PAC 1 Carla Illa</title>
+    <title>Presentació - PAC 3 Carla Illa</title>
     <link rel="stylesheet" href="styles.css">
-    <script type="module" src="app.js"></script>
+    <script async type="module" src="app.js"></script>
     <link rel="icon" type="image/x-icon" sizes="32x32" href="img/favicon.ico">
   </head>
   <body>
@@ -46,7 +46,7 @@
         <article>
           <h1>La comarca del Bages</h1>
           <div class="bages-map">
-            <svg width="100%" height="100%" viewBox="0 0 2718 2736" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;">
+            <svg loading="lazy" width="100%" height="100%" viewBox="0 0 2718 2736" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;">
                 <use href="#_Image1" x="0" y="0""/>
                 <defs>
                     <image id="_Image1" href="img/bages-map-png.png"/>
@@ -56,7 +56,7 @@
           <p>El Bages és una comarca situada al bell mig de Catalunya. És un territori divers que acomula un gran llegat històric, amb elements com el castell de Cardona, el monestir de Sant Benet de Bages i el de la Mare de Déu de Montserrat i un elevat nombre d’esglésies romàniques i gòtiques. Es troba en una zona geogràficament rica que compta amb la Serra de Sant Llorenç del Munt i l’Obac i el massís de Montserrat. Es tracta, doncs, d’una regió pròspera que té molt per oferir.</p>
           <h2>Propostes per descobrir el Bages</h2>
           <div class="map-wrapper">
-            <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1734zNJbWXs2lf4uRTTM17UA-ZKHr0q4&ehbc=2E312F" width="640" height="480"></iframe>
+            <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1734zNJbWXs2lf4uRTTM17UA-ZKHr0q4&ehbc=2E312F" loading="lazy" width="640" height="480"></iframe>
           </div>
           <p>Et proposem deu destinacions i activitats per conèixer la comarca. A la <a href="categoria.html">llista</a> hi trobaràs des de destins més concorreguts com Montserrat, Cardona o el Parc Natural de Sant Llorenç del Munt i l'Obac a opcions més desconegudes, com El Puig de la Balma, El Centre d’Interpretació de la Bruixeria i el Museu dels Maquis de Castellnou de Bages.</p>
           <p>Totes elles esdevenen elements que doten el Bages de riquesa patrimonial, natural i lúdica. Cal tenir en compte, però, que aquí s'ha fet una selecció i que no es contemplen totes les possibilitats que ofereix el territori, que són moltes i molt variades. Si vols conèixer la comarca més a fons pots visitar la <a href="https://bagesturisme.cat/" target="_blank">pàgina oficial de turisme del Bages</a>.</p>
