--- a/src/castellnou.html
+++ b/src/castellnou.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Presentació - PAC 1 Carla Illa</title>
+    <title>Castellnou - PAC 3 Carla Illa</title>
     <link rel="stylesheet" href="styles.css">
-    <script type="module" src="app.js"></script>
+    <script async type="module" src="app.js"></script>
     <link rel="icon" type="image/x-icon" sizes="32x32" href="img/favicon.ico">
   </head>
   <body>
@@ -48,12 +48,12 @@
           <picture>
             <source media="(max-width: 799px)" srcset="img/castellnou-crop.webp">
             <source media="(min-width: 800px)" srcset="img/castellnou.webp">
-            <img src="img/castellnou.webp" alt="Església de Castellnou de Bages" class="picture-detall">
+            <img src="img/castellnou.webp" loading="lazy" alt="Església de Castellnou de Bages" class="picture-detall">
           </picture>
           <p>El Museu dels Maquis, situat al nucli històric de Castellnou de Bages, és un centre de referència sobre el fenomen dels maquis a la Catalunya central. Repassa l'evolució de la lluita de guerrilles durant la Guerra Civil i el franquisme i relata els seus moviments i amagatalls. Entre molts d'altres es destaca el paper de Ramon Vila i Capdevila, denominat Caracremada, que va ser un dels maquis més populars i que està enterrat al cementiri que hi ha sota el museu.</p>
           <h2>"Els últims passos de Ramon Vila Capdevila"</h2>
           <div class="video-wrapper">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/YHBjM-J-JRs" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/YHBjM-J-JRs" loading="lazy" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
           </div>
           <p>Ramon Vila i Capdevila, conegut com a Caracremada, va ser un maqui antifranquista que va dirigir diverses operacions de sabotatge contra el règim franquista gràcies als seus coneixements del medi geogràfic. Va morir als 55 anys al rebre una emboscada de la guàrdia civil després de fer caure unes torres d'alta tensió a Rajadell. És considerat l'últim maqui català.</p>
           <h2>Informació pràctica</h2>
@@ -72,19 +72,19 @@
               <a href="do-bages.html"><figure>
                 <img 
                   srcset="img/do-pla-bages-square-320.webp, img/do-pla-bages-square-480.webp 1.5x, img/do-pla-bages-square.webp 2x"
-                  src="img/do-pla-bages-square.webp" alt="DO Pla de Bages">
+                  src="img/do-pla-bages-square.webp" loading="lazy" alt="DO Pla de Bages">
                 <figcaption>DO Pla de Bages</figcaption>
               </figure></a>
               <a href=""><figure>
                 <img 
                   srcset="img/seu-square-320.webp, img/seu-square-480.webp 1.5x, img/seu-square.webp 2x"
-                  src="img/seu-square.webp" alt="La Seu de Manresa">
+                  src="img/seu-square.webp" loading="lazy" alt="La Seu de Manresa">
                 <figcaption>La Seu de Manresa</figcaption>
               </figure></a>
               <a href=""><figure>
                 <img 
                   srcset="img/cardona-square-320.webp, img/cardona-square-480.webp 1.5x, img/cardona-square.webp 2x"
-                  src="img/cardona-square.webp" alt="Cardona">
+                  src="img/cardona-square.webp" loading="lazy" alt="Cardona">
                 <figcaption>Cardona</figcaption>
               </figure></a>
             </div>
