--- a/src/do-bages.html
+++ b/src/do-bages.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Presentació - PAC 1 Carla Illa</title>
+    <title>Do Pla de Bages - PAC 3 Carla Illa</title>
     <link rel="stylesheet" href="styles.css">
-    <script type="module" src="app.js"></script>
+    <script async type="module" src="app.js"></script>
     <link rel="icon" type="image/x-icon" sizes="32x32" href="img/favicon.ico">
   </head>
   <body>
@@ -48,12 +48,12 @@
             <picture>
               <source media="(max-width: 799px)" srcset="img/do-pla-bages-crop.webp">
               <source media="(min-width: 800px)" srcset="img/do-pla-bages.webp">
-              <img src="img/do-pla-bages.webp" alt="Raïm negre" class="picture-detall">
+              <img src="img/do-pla-bages.webp" loading="lazy" alt="Raïm negre" class="picture-detall">
             </picture>
           <p>La Denominació d'Origen Pla de Bages és un reconeixement de qualitat dels vins de la comarca creat el 1995. En ella s'hi integren nissagues de viticultors, cooperatives centenàries i petits projectes familiars. Un dels seus trets destacats és la reivindicació de varietats autòctones de raïm com el picapoll blanc i negre, el sumoll i el mandó.</p>
           <h2>Els cellers</h2>
           <div class="map-wrapper">
-            <iframe src="https://www.google.com/maps/d/embed?mid=1HWbm-GvWNW2p0hckyGu5BlaOuDvKaIZr&ehbc=2E312F" width="640" height="480"></iframe>
+            <iframe src="https://www.google.com/maps/d/embed?mid=1HWbm-GvWNW2p0hckyGu5BlaOuDvKaIZr&ehbc=2E312F" loading="lazy" width="640" height="480"></iframe>
           </div>
           <p>La majoria de cellers són explotacions familiars amb vinya pròpia que tenen cura de les seves terres de forma molt personalitzada i això els permet obtenir vins de gran qualitat. Actualment hi ha disset cellers adscrit a la DO Pla de Bages i alguns dels més destacats són l'Abadal, l'Oller del Mas i el Collbaix.</p>
           <h2>Les varietats</h2>
@@ -92,19 +92,19 @@
               <a href="castellnou.html"><figure>
                 <img 
                   srcset="img/castellnou-square-320.webp, img/castellnou-square-480.webp 1.5x, img/castellnou-square.webp 2x"
-                  src="img/castellnou-square.webp" alt="Castellnou de Bages">
+                  src="img/castellnou-square.webp" loading="lazy" alt="Castellnou de Bages">
                 <figcaption>Museu dels Maquis</figcaption>
               </figure></a>
               <a href=""><figure>
                 <img 
                   srcset="img/seu-square-320.webp, img/seu-square-480.webp 1.5x, img/seu-square.webp 2x"
-                  src="img/seu-square.webp" alt="La Seu de Manresa">
+                  src="img/seu-square.webp" loading="lazy" alt="La Seu de Manresa">
                 <figcaption>La Seu de Manresa</figcaption>
               </figure></a>
               <a href=""><figure>
                 <img 
                   srcset="img/cardona-square-320.webp, img/cardona-square-480.webp 1.5x, img/cardona-square.webp 2x"
-                  src="img/cardona-square.webp" alt="Cardona">
+                  src="img/cardona-square.webp" loading="lazy" alt="Cardona">
                 <figcaption>Cardona</figcaption>
               </figure></a>
             </div>
