--- a/src/index.html
+++ b/src/index.html
@@ -44,12 +44,12 @@
     <main>
         <div class="container">
             <h1>El Bages</h1>
-            <p>El Bages és una comarca situada al bell mig de Catalunya. És un territori divers que acomula un gran llegat històric, amb elements com el castell de Cardona i el monestir de Sant Benet de Bages. Es troba en una zona geogràficament rica que compta amb la Serra de Sant Llorenç del Munt i l’Obac i el massís de Montserrat. Es tracta, doncs, d’una regió pròspera que té molt per oferir.</p>
+            <div><p>El Bages és una comarca situada al bell mig de Catalunya. És un territori divers que acomula un gran llegat històric, amb elements com el castell de Cardona i el monestir de Sant Benet de Bages. Es troba en una zona geogràficament rica que compta amb la Serra de Sant Llorenç del Munt i l’Obac i el massís de Montserrat. Es tracta, doncs, d’una regió pròspera que té molt per oferir.</p></div>
           </div>
             <img 
               srcset="img/montserrat-mespetit.webp 400w, img/montserrat-petit.webp 640w, img/montserrat.webp 1920w, img/montserrat-gran.webp 3000w"
               sizes="(max-width: 399px) 400px, (max-width: 500px) 640px, (max-width: 2500px) 1920px, 3000px"
-              src="img/montserrat.webp"
+              src="img/montserrat.webp" width="640" height="360"
               alt="Montserrat">
           <div class="container">
             <a href="categoria.html" class="button">Endinsa-t'hi!</a>
