--- a/src/do-bages.html
+++ b/src/do-bages.html
@@ -48,7 +48,7 @@
             <picture>
               <source media="(max-width: 799px)" srcset="img/do-pla-bages-crop.webp">
               <source media="(min-width: 800px)" srcset="img/do-pla-bages.webp">
-              <img src="img/do-pla-bages.webp" loading="lazy" alt="Raïm negre" class="picture-detall">
+              <img src="img/do-pla-bages.webp" alt="Raïm negre" class="picture-detall">
             </picture>
           <p>La Denominació d'Origen Pla de Bages és un reconeixement de qualitat dels vins de la comarca creat el 1995. En ella s'hi integren nissagues de viticultors, cooperatives centenàries i petits projectes familiars. Un dels seus trets destacats és la reivindicació de varietats autòctones de raïm com el picapoll blanc i negre, el sumoll i el mandó.</p>
           <h2>Els cellers</h2>
