--- a/src/castellnou.html
+++ b/src/castellnou.html
@@ -48,7 +48,7 @@
           <picture>
             <source media="(max-width: 799px)" srcset="img/castellnou-crop.webp">
             <source media="(min-width: 800px)" srcset="img/castellnou.webp">
-            <img src="img/castellnou.webp" loading="lazy" alt="Església de Castellnou de Bages" class="picture-detall">
+            <img src="img/castellnou.webp" alt="Església de Castellnou de Bages" class="picture-detall">
           </picture>
           <p>El Museu dels Maquis, situat al nucli històric de Castellnou de Bages, és un centre de referència sobre el fenomen dels maquis a la Catalunya central. Repassa l'evolució de la lluita de guerrilles durant la Guerra Civil i el franquisme i relata els seus moviments i amagatalls. Entre molts d'altres es destaca el paper de Ramon Vila i Capdevila, denominat Caracremada, que va ser un dels maquis més populars i que està enterrat al cementiri que hi ha sota el museu.</p>
           <h2>"Els últims passos de Ramon Vila Capdevila"</h2>
