--- a/src/castellnou.html
+++ b/src/castellnou.html
@@ -52,9 +52,7 @@
           </picture>
           <p>El Museu dels Maquis, situat al nucli històric de Castellnou de Bages, és un centre de referència sobre el fenomen dels maquis a la Catalunya central. Repassa l'evolució de la lluita de guerrilles durant la Guerra Civil i el franquisme i relata els seus moviments i amagatalls. Entre molts d'altres es destaca el paper de Ramon Vila i Capdevila, denominat Caracremada, que va ser un dels maquis més populars i que està enterrat al cementiri que hi ha sota el museu.</p>
           <h2>"Els últims passos de Ramon Vila Capdevila"</h2>
-          <div class="video-wrapper">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/YHBjM-J-JRs" loading="lazy" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-          </div>
+          <a href="https://www.youtube.com/embed/YHBjM-J-JRs" target="_blank" class="button">Mira el documental</a>
           <p>Ramon Vila i Capdevila, conegut com a Caracremada, va ser un maqui antifranquista que va dirigir diverses operacions de sabotatge contra el règim franquista gràcies als seus coneixements del medi geogràfic. Va morir als 55 anys al rebre una emboscada de la guàrdia civil després de fer caure unes torres d'alta tensió a Rajadell. És considerat l'últim maqui català.</p>
           <h2>Informació pràctica</h2>
           <div class="lists">
