--- a/src/castellnou.html
+++ b/src/castellnou.html
@@ -48,7 +48,7 @@
           <picture>
             <source media="(max-width: 799px)" srcset="img/castellnou-crop.webp">
             <source media="(min-width: 800px)" srcset="img/castellnou.webp">
-            <img src="img/castellnou.webp" alt="Església de Castellnou de Bages" class="picture-detall">
+            <img src="img/castellnou.webp" width="640" height="360" alt="Església de Castellnou de Bages" class="picture-detall">
           </picture>
           <p>El Museu dels Maquis, situat al nucli històric de Castellnou de Bages, és un centre de referència sobre el fenomen dels maquis a la Catalunya central. Repassa l'evolució de la lluita de guerrilles durant la Guerra Civil i el franquisme i relata els seus moviments i amagatalls. Entre molts d'altres es destaca el paper de Ramon Vila i Capdevila, denominat Caracremada, que va ser un dels maquis més populars i que està enterrat al cementiri que hi ha sota el museu.</p>
           <h2>"Els últims passos de Ramon Vila Capdevila"</h2>
@@ -70,19 +70,19 @@
               <a href="do-bages.html"><figure>
                 <img 
                   srcset="img/do-pla-bages-square-320.webp, img/do-pla-bages-square-480.webp 1.5x, img/do-pla-bages-square.webp 2x"
-                  src="img/do-pla-bages-square.webp" loading="lazy" alt="DO Pla de Bages">
+                  src="img/do-pla-bages-square.webp" width="480" height="480" class="picture-detall" loading="lazy" alt="DO Pla de Bages">
                 <figcaption>DO Pla de Bages</figcaption>
               </figure></a>
               <a href=""><figure>
                 <img 
                   srcset="img/seu-square-320.webp, img/seu-square-480.webp 1.5x, img/seu-square.webp 2x"
-                  src="img/seu-square.webp" loading="lazy" alt="La Seu de Manresa">
+                  src="img/seu-square.webp" width="480" height="480" class="picture-detall" loading="lazy" alt="La Seu de Manresa">
                 <figcaption>La Seu de Manresa</figcaption>
               </figure></a>
               <a href=""><figure>
                 <img 
                   srcset="img/cardona-square-320.webp, img/cardona-square-480.webp 1.5x, img/cardona-square.webp 2x"
-                  src="img/cardona-square.webp" loading="lazy" alt="Cardona">
+                  src="img/cardona-square.webp" width="480" height="480" class="picture-detall" loading="lazy" alt="Cardona">
                 <figcaption>Cardona</figcaption>
               </figure></a>
             </div>
