--- a/src/do-bages.html
+++ b/src/do-bages.html
@@ -48,7 +48,7 @@
             <picture>
               <source media="(max-width: 799px)" srcset="img/do-pla-bages-crop.webp">
               <source media="(min-width: 800px)" srcset="img/do-pla-bages.webp">
-              <img src="img/do-pla-bages.webp" alt="Raïm negre" class="picture-detall">
+              <img src="img/do-pla-bages.webp" width="640" height="360" alt="Raïm negre" class="picture-detall">
             </picture>
           <p>La Denominació d'Origen Pla de Bages és un reconeixement de qualitat dels vins de la comarca creat el 1995. En ella s'hi integren nissagues de viticultors, cooperatives centenàries i petits projectes familiars. Un dels seus trets destacats és la reivindicació de varietats autòctones de raïm com el picapoll blanc i negre, el sumoll i el mandó.</p>
           <h2>Els cellers</h2>
@@ -92,19 +92,19 @@
               <a href="castellnou.html"><figure>
                 <img 
                   srcset="img/castellnou-square-320.webp, img/castellnou-square-480.webp 1.5x, img/castellnou-square.webp 2x"
-                  src="img/castellnou-square.webp" loading="lazy" alt="Castellnou de Bages">
+                  src="img/castellnou-square.webp" width="480" height="480" class="picture-detall" loading="lazy" alt="Castellnou de Bages">
                 <figcaption>Museu dels Maquis</figcaption>
               </figure></a>
               <a href=""><figure>
                 <img 
                   srcset="img/seu-square-320.webp, img/seu-square-480.webp 1.5x, img/seu-square.webp 2x"
-                  src="img/seu-square.webp" loading="lazy" alt="La Seu de Manresa">
+                  src="img/seu-square.webp" width="480" height="480" class="picture-detall" loading="lazy" alt="La Seu de Manresa">
                 <figcaption>La Seu de Manresa</figcaption>
               </figure></a>
               <a href=""><figure>
                 <img 
                   srcset="img/cardona-square-320.webp, img/cardona-square-480.webp 1.5x, img/cardona-square.webp 2x"
-                  src="img/cardona-square.webp" loading="lazy" alt="Cardona">
+                  src="img/cardona-square.webp" width="480" height="480" class="picture-detall" loading="lazy" alt="Cardona">
                 <figcaption>Cardona</figcaption>
               </figure></a>
             </div>
